car parser created, SonataUserBundle generated, AcmeDemoBundle deleted

--- a/path/src/Insurance/ContentBundle/Resources/views/index.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/index.html.twig
@@ -6,6 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <body>
-    <div>{% block content %}{% endblock %}</div>
+    <div>{% block content %}{% endblock %}
+    element was added to DB with ID: {{ id }}
+    </div>
   </body>
 </html>
