--- a/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'InsuranceContentBundle::index.html.twig' %}
+{% extends 'InsuranceContentBundle::base.html.twig' %}
 {% block content %}
 <h1>Hello world!</h1>
 {% endblock %}
