Notify templates added. Some params for templates implemented via config file

--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/feedbackNotification.txt.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/feedbackNotification.txt.twig
@@ -1,1 +1,8 @@
-aylele
+Здравствуйте!
+На сайт поступил новый {{feedbackTypeText}}.
+Контактные данные для связи:
+Имя: {{contact.name}}
+{% if contact.timeToCall %}Время звонка: {{contact.timeToCall}}{% endif %}
+{% if contact.phoneNumber %}Контактный телефон: {{contact.phoneNumber}}{% endif %}
+{% if contact.email %}EMail: {{contact.email}}{% endif %}
+{% if contact.question %}Вопрос {{contact.question}}{% endif %}
