--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/payedOrderNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/payedOrderNotification.html.twig
@@ -2,7 +2,7 @@
 
 Прежде всего позвольте выразить Вам свою благодарность за оказанное доверие нашему сервису.
 
-Вами успешно был оформлен заказ на {{siteDomain}}.
+Мы получили оплату за Ваш заказ на {{siteDomain}}.
 
 --------------------------
 Номер вашего заказа: {{order.id}}
@@ -19,7 +19,7 @@
 Наш партнер, обеспечивающий страховые обязательства: ЧАО «СК «БРОКБИЗНЕС».
 
 ------------------------------------------------------
-<b>Выбранный Вами способ оплаты:</b> Наличными курьеру
+<b>Выбранный Вами способ оплаты:</b> Пластиковая карта VISA, MASTERCARD
 ------------------------------------------------------
 
 Наш менеджер свяжется с Вами в ближайшее время для уточнения деталей доставки.
