--- a/path/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/path/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,6 +1,8 @@
-{% if error %}
-    <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
-{% endif %}
+{% for flashMessage in app.session.flashbag.get('error') %}
+    <div class="flash notice">
+        {{ flashMessage }}
+    </div>
+{% endfor %}
 
 <form action="{{ path("fos_user_security_check") }}" method="post" id="login-form">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
